--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         <!-- span text 'PHARRELLWILLIAMS.COM' -->
         <span>PHARRELLWILLIAMS.COM</span>
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
-        <img src="images/columbia-logo.png" alt="Columbia Records Logo"
+        <img src="images/columbia-logo.png" alt="Columbia Records Logo">
         <!-- span text 'COLUMBIARECORDS.COM' -->
-
+        <span>COLUMBIARECORDS.COM</span>
         <br>
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
